salti/src/ui/snapshots/salti__ui__alignment_pane__tests__alignment_pane_basic.snap
---
source: salti/src/ui/alignment_pane.rs
assertion_line: 619
expression: "render_alignment_pane_text(&alignment, &ColumnStatsCache::default(),\nRect::new(0, 0, 100, 12),)"
---
┌Alignment──────────────────────────────────────────────────────────────────────┐
│1       10                                                                     │
│.   .    |    .                                                                │
│CATCATCATCATCATCAT                                                             │
│CATCATCATCATCATCAT                                                             │
│CATCATCATCATCATCAT                                                             │
│                                                                               │
└───────────────────────────────────────────────────────────────────────────────┘
