salti/src/ui/snapshots/salti__ui__alignment_pane__tests__alignment_pane_raw_diff_consensus.snap
---
source: salti/src/ui/alignment_pane.rs
assertion_line: 794
expression: "render_alignment_pane_text(&alignment, &metrics, Rect::new(0, 0, 100, 12), 0,\n0,)"
---
┌Alignment──────────────────────────────────────────────────────────────────────┐
│1       10                                                                     │
│.   .    |    .                                                                │
│..................                                                             │
│......G...........                                                             │
│............G.....                                                             │
│                                                                               │
└───────────────────────────────────────────────────────────────────────────────┘
