salti/src/ui/snapshots/salti__ui__alignment_pane__tests__alignment_pane_scrolled_with_scrollbar.snap
---
source: salti/src/ui/alignment_pane.rs
assertion_line: 825
expression: "render_alignment_pane_text(&alignment, &ColumnStatsCache::default(),\nRect::new(0, 0, 60, 12), 0, 10,)"
---
┌Alignment──────────────────────────────────────┐
│        20        30                           │
│    .    |    .    |    .                      │
│ATCATCATCATCATCATCATCATCAT                     │
│ATCATCATCATCATCATCATCATCAT                     │
│ATCATCATCATCATCATCATCATCAT                     │
│                                               │
└───────────▬▬▬─────────────────────────────────┘
